src/index.scss
@import "./colorbase.scss";

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.popover {
  margin-left: -30px;
}

.form-check-input:checked {
  background-color: $color-primary;
  border-color: $color-primary;
}

.form-check-input:focus {
  box-shadow: 0px 0px 2px 4px rgba($color-primary, 0.4) !important;
}



/* 
X-SmallNone	<576px
Small	sm	≥576px
Medium	md	≥768px
Large	lg	≥992px
Extra large	xl	≥1200px
Extra extra large	xxl	≥1400px
*/

@media (max-width: 991px) {
  .popover {
    margin-left: -40px;
  }

  .cst-content {
    padding-left: 0px !important;
    transition: 0.3s;
  }

  .cst-float-on {
    margin-left: 215px !important;
    z-index: 2;
    transition: 0.3s;
  }

  .cst-float-off {
    margin-left: 10px !important;
    transition: 0.3s;
  }

  .cst-border-right {
    border-right: none !important;
  }

  .cst-border-radius-right-xs{
        border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
  }
}

.cst-login-carousel-caption-margin{     
  margin-top: 135px ;
}

@media (max-width: 1400px){
  .cst-pageNotFound-row-h{
      min-height: 480px !important;
  }
}

.cst-sidebar {
  background-color: $color-plain;
  width: 250px;
  border-right: 0.6px solid lighten($color-primary, 20%);
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  min-height: 100vh !important;
  transition: 0.3s;
  overflow-x: hidden;
  overflow-y: auto;
  height: 100vh;
  z-index: 2;
}

.cst-sidebar-collapsed {
  width: 0px;
  background-color: $color-plain;
  border-right: 0.6px solid lighten($color-primary, 20%);
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  min-height: 100vh !important;
  transition: 0.3s;
  overflow: hidden !important;
  overflow-y: auto;
  height: 100vh;
  z-index: 2;
}

.cst-content {
  padding-left: 250px;
  transition: 0.3s;
}

.cst-content-extended {
  padding-left: 0px;
  transition: 0.3s;
}

.cst-bg-primary {
  background-color: $color-primary;
}

.cst-bg-primary-light {
  background-color: lighten($color-primary, 23%);
}


.cst-bg-secondary {
  background-color: $color-secondary;
}

.cst-bg-plain {
  background-color: $color-plain;
}

.cst-bg-positive-light {
  background-color: lighten($color-positive, 53%);
}

.cst-bg-negative-light {
  background-color: lighten($color-negative, 53%);
}

.cst-bg-neutral-light {
  background-color: lighten($color-neutral, 18%);
}

.cst-bg-neutral-lighter {
  background-color: lighten($color-neutral,24%);
}

.cst-heading-bg {
  background-color: lighten($color-primary, 32%);
}

.cst-text-primary {
  color: $color-primary;
}

.cst-text-secondary {
  color: $color-secondary;
}

.cst-text-plain {
  color: $color-plain;
}

.cst-text-positive {
  color: $color-positive;
}

.cst-text-negative {
  color: $color-negative;
}

.cst-text-warning {
  color: $color-warning;
}

.cst-text-neutral {
  color: $color-neutral;
}
.cst-guide-primary{
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: $color-primary;
}

.cst-guide-neutral{
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: $color-neutral;
}

.cst-w-min-content{
  width: min-content;
}

.cst-w-100{
  width: 100px;
}

.cst-letter-spacing-sm {
  letter-spacing: 1px;
}

.cst-letter-spacing {
  letter-spacing: 4px;
}

.cst-clickable {
  cursor: pointer;
}

.cst-hover-bg-respond {
  transition: 0.3s;
  &:hover {
    background-color: lighten($color-primary, 35%);
    transition: 0.3s;
  }
}

.cst-hover-color-respond {
  transition: 0.3s;
  &:hover {
    color: lighten($color-primary, 29%);
    transition: 0.3s;
  }
}

.cst-min-h-md{    
  min-height: 800px;
}

.cst-h-xs {
  max-height: 320px;
}

.cst-h-sm {
  max-height: calc(100vh - 320px);
}

.cst-h-md {
  max-height: calc(100vh - 480px);
}

.cst-m-xs{
  min-width: 250px;
}

.cst-y-scroll {
  overflow-y: auto;
}

.cst-form-control {
  border: 1px solid lighten($color-primary, 10%);
  color: $color-primary;
  transition: 0.3s;

  &:focus {
    box-shadow: 0 0 0 0.1rem lighten($color-primary, 20%);
    border-color: $color-secondary;
    background-color: lighten($color-primary, 35%);
    transition: 0.3s;
  }
}

.cst-form-counter {
  border: 1px solid lighten($color-primary, 10%);
  padding: 2px 4px 2px 4px;
  transition: 0.3s;

  &:focus {
    box-shadow: 0 0 0 0.1rem lighten($color-primary, 20%);
    border-color: $color-secondary;
    background-color: lighten($color-primary, 35%);
    transition: 0.3s;
  }
}

.cst-form-control-inner-padding {
  padding-left: 35px;
}

.cst-form-icon-float {
  position: absolute;
  color: $color-primary;
  top: 0;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0px 10px;
}

.cst-form-icon-float-end {
  position: absolute;
  color: $color-primary;
  top: 0;
  bottom: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0px 10px;
}

.cst-form-invalid {
  border: 1px solid lighten($color-negative, 10%);
  color: $color-negative;

  &:focus {
    box-shadow: 0 0 0 0.1rem lighten($color-negative, 20%);
    border-color: $color-negative;
    background-color: lighten($color-primary, 35%);
    transition: 0.3s;
  }
}

.cst-section-shadow {
  box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.2);
}

.cst-border-bottom {
  border-bottom: 1px solid rgba($color-primary, 0.4);
}

.cst-border-right {
  border-right: 2px solid rgba($color-primary, 0.4);
}

.cst-btn-primary {
  background-color: $color-primary;
  color: $color-plain;  

  &:hover, &:focus {
    background-color: $color-plain;
    border: 1px solid $color-primary;
    color: $color-primary;
    font-weight: bold;
  }

  &:disabled {
    background-color: $color-primary;
    opacity: 0.4;
    color: $color-plain;
  }
}

.cst-btn-secondary {
  background-color: $color-plain;
  border: 1px solid $color-primary;
  color: $color-primary;

  &:hover {
    background-color: $color-primary;
    border: 1px solid $color-primary;
    color: $color-plain;
  }
}

.cst-btn-neutral {
  background-color: $color-primary;
  color: $color-plain;
  transition: 0.3s;

  &:hover {
    background-color: darken($color-primary, 20%);
    color: $color-plain;
    transition: 0.3s;
  }
}

.cst-btn-success {
  background-color: $color-warning;
  color: $color-plain;
  transition: 0.3s;

  &:hover {
    background-color: darken($color-warning, 20%);
    color: $color-plain;
    transition: 0.3s;
  }
}

.cst-btn-danger {
  background-color: $color-negative-dark;
  color: $color-plain;
  transition: 0.3s;

  &:hover {
    background-color: darken($color-negative, 20%);
    color: $color-plain;
    transition: 0.3s;
  }
}

.cst-btn-eclipse {
  width: 55px;
  height: 30px;
  border-radius: 100px;
}

.cst-chip-radius {
  border-radius: 20px;
}

.cst-item {
  cursor: pointer;
  transition: 0.3s;

  &:hover {
    background-color: $color-primary;
    color: $color-plain;
    border-radius: 18%;
    transition: 0.3s;
  }
}

.cst-float-on {
  margin-left: -40px;
  z-index: 2;
  transition: 0.3s;
}

.cst-float-off {
  margin-left: 15px;
  transition: 0.3s;
}

.cst-border-radius-left{
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.cst-border-radius-right{
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

.cst-pagination-toolbar {
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.cst-table {
  width: 100%;
  border-collapse: collapse;
  transition: 0.3s;
  font-size: 14px;
  font-weight: bold;

  thead tr {
    border-top: 1px solid lighten($color-primary, 23%);
    border-bottom: 1px solid lighten($color-primary, 23%);
    vertical-align: middle;
  }

  thead tr th {
    background-color: lighten($color-primary, 32%);
    text-transform: uppercase;
    color: $color-secondary;
    padding-top: 15px;
    padding-bottom: 15px;
  }

  td {
    padding: 18px 10px;
    vertical-align: middle;
  }

  tbody tr {
    cursor: pointer;

    &:hover {
      background-color: lighten($color-primary, 32%);
      transition: 0.3s;
    }
  }
}

.cst-subtable {
  // width: 100%;
  border-collapse: collapse;
  transition: 0.3s;
  font-size: 14px;
  font-weight: bold;

  thead tr {
    border-top: 1px solid lighten($color-primary, 23%);
    border-bottom: 1px solid lighten($color-primary, 23%);
    vertical-align: middle;
  }

  thead tr th {    
    background-color: lighten($color-secondary, 38%);
    text-transform: uppercase;
    color: $color-primary;
  }

  td {
    padding: 12px 8px;
    vertical-align: middle;
  }

  tbody tr {
    cursor: pointer;

    &:hover {
      background-color: lighten($color-secondary, 40%);
      transition: 0.3s;
    }
  }

  .cst-subtable-toolbar {
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
  }
}

